...
fun CloseIcon(
    modifier: Modifier = Modifier.size(24.dp),
    color: Color = Color.White,
) {
    Icon(
        Icons.Filled.Close,
        "close",
        modifier = modifier,
        tint = color,
    )
}

@ExcludeFromCoverage
...
